创建local测试数据库，三个表格，基本的cols

--- a/项目2(ing)-客户申请保单/code/所有html合并尝试/my code/css/login.css
+++ b/项目2(ing)-客户申请保单/code/所有html合并尝试/my code/css/login.css
@@ -7,7 +7,7 @@
         }
         /* Styling form-control Class */
         .form-control {
-          text-align: left;
+          text-align: center;
           margin-bottom: 25px;
       }
 
