--- a/项目2(ing)-客户申请保单/code/previous code/css/geeks.css
+++ b/项目2(ing)-客户申请保单/code/previous code/css/geeks.css
@@ -36,6 +36,7 @@
   }/* Styling Button */
   button {
     background-color: #05c46b;
+    border: 1px solid #777;
     border-radius: 2px;
     font-family: inherit;
     font-size: 21px;
@@ -43,42 +44,4 @@
     width: 100%;
     margin-top: 50px;
     margin-bottom: 20px;
-}
-
-.tab{
-    display:none;
-}
-
-
-
-
-
-/* <= 568px */
-@media screen and (max-width: 568px) {
-    table {
-        border: 0;
-    }
-    table thead {
-        display: none;
-    }
-    table tr {
-        margin-bottom: 10px;
-        display: block;
-        border-bottom: 2px solid #ddd;
-    }
-    table td {
-        display: block;
-        text-align: right;
-        font-size: 13px;
-        border-bottom: 1px dotted #ccc;
-    }
-    table td:last-child {
-        border-bottom: 0;
-   }
-    table td:before {
-        content: attr(data-label);
-        float: left;
-        text-transform: uppercase;
-        font-weight: bold;
-    }
 }
